--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link": "^1.2.6",
+    "apollo-link-error": "^1.1.5",
+    "apollo-link-http": "^1.5.9",
     "expo": "^32.0.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.10.0",
     "react": "16.5.0",
+    "react-apollo": "^2.3.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "devDependencies": {
