--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@appandflow/touchable": "^2.0.0",
     "apollo-cache-inmemory": "^1.3.12",
     "apollo-client": "^2.4.8",
     "apollo-link": "^1.2.6",
