--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "^32.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
+    "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-apollo": "^2.3.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
